istio/create-authorizationpolicy/.chainsaw-test/chainsaw-step-02-apply-1.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  labels:
    app.kubernetes.io/component: background-controller
    app.kubernetes.io/instance: kyverno
    app.kubernetes.io/part-of: kyverno
  name: kyverno:background-controller:istio-authzpolicy
rules:
- apiGroups:
  - security.istio.io
  resources:
  - authorizationpolicies
  verbs:
  - create
  - update
  - delete
