istio/create-authorizationpolicy/.chainsaw-test/chainsaw-step-05-apply-1.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-cr-authpol-ns
