istio/create-authorizationpolicy/.chainsaw-test/chainsaw-step-01-assert-1.yaml
apiVersion: apiextensions.k8s.io/v1
kind: CustomResourceDefinition
metadata:
  name: authorizationpolicies.security.istio.io
spec: {}
status:
  acceptedNames:
    kind: AuthorizationPolicy
    listKind: AuthorizationPolicyList
    plural: authorizationpolicies
    singular: authorizationpolicy
  storedVersions:
  - v1beta1
