istio/create-authorizationpolicy/.chainsaw-test/chainsaw-step-06-assert-1.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: default-deny
  namespace: istio-cr-authpol-ns
spec: {}
