istio/create-authorizationpolicy/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: create-authorizationpolicy
spec:
  steps:
  - name: step-01
    try:
    - assert:
        file: chainsaw-step-01-assert-1.yaml
  - name: step-02
    try:
    - apply:
        file: chainsaw-step-02-apply-1.yaml
  - name: step-04
    try:
    - apply:
        file: ../create-authorizationpolicy.yaml
    - assert:
        file: policy-ready.yaml
  - name: step-05
    try:
    - apply:
        file: chainsaw-step-05-apply-1.yaml
  - name: step-06
    try:
    - assert:
        file: chainsaw-step-06-assert-1.yaml
